[package]
name = "sockeye"
version = "0.1.0"
edition = "2018"

[features]
default = ["logging"]
logging = []

[profile.release]
lto             = true
panic           = "abort"
codegen-units   = 1
opt-level       = 's'

[dependencies]
async-trait = "*"
rand = "*"
lazy_static = "*"
env_logger = "*"
obfstr = "*"
log = "*"
regex = "*"
tokio = {version = "*", features=["rt-multi-thread", "macros"]}
async-scoped = {version = "*", features=["use-tokio"]}
reqwest = {version = "*", features=["socks"]}
